--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.109.0",
     "uvicorn[standard]>=0.25.0",
     "sqlmodel>=0.0.14",
+    "httpx>=0.26.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
@@ -22,4 +23,5 @@ package-type = "application"
 dev = [
     "pytest>=7.4.4",
     "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.23.3",
 ]
